# VegaProject

./: .gitignore  CMakeLists.txt  README.md  data.csv
.github/workflows/: build.yaml  build.yml  cmake-single-platform.yml  publish-docs.yml
benchmark/: benchmark.cpp
docs/: Doxyfile
hft_cpp/: data_loader.cpp
include/: fact.h
include/hft_cpp/: data_loader.h
python/: hft_python.i
src/: fact.cpp  main.cpp
test/: test.cpp
